--- a/前端.md
+++ b/前端.md
@@ -2,6 +2,8 @@
 
 ## 前端
 
+### C++
+
 #### 1.C-字符串
 
 sprintf_s（src, "***"）
@@ -186,8 +188,75 @@ right(int n)
    };//IPBObjectExtension
    ```
 
-7. 
+
+#### 6.代码习惯
+
+1. 数据和对象
+
+   - 需要经常添加方法，采用过程式。
+   - 需要经常添加对象，采用面向对象。
+
+2. 组合优先于继承。努力只在“是一个”（is-a）情况下使用继承，必要的话令析构函数为virtual，必要是指，如果该类具有虚函数，其析构函数应该为虚函数。重定义派生的虚函数，需要在类中**明确声明**为virtual。
+
+   
+
+
+
+
+
+
+
+
 
 [^ 1 ]:<font size = 3 >因为，全局变量的构造函数、析构函数以及初始化操作的调用顺序只是部分规定，每次生成有可能有变化，从而导致难以发现的bug。</font>
 [^2]: 如果对象需要有意义的初始化，考虑使用另外的Init()方法，并（或）增加一个成员标记用于指示对象是否已经初始化成功。
 [^3]: 如果结构体中有虚函数或结构体成员中有虚函数，则会将虚函数指针置0，如果后续程序调用虚函数，空指针很可能导致程序崩溃。因此，有虚函数或成员函数中有虚函数的结构体初始化，一定要用构造函数来完成。另外，如果一个类的结构中包含STL模板，使用ZeroMemory对这个对象清零操作也会引起一系列的崩溃问题（指针指向内存错误、迭代器越界访问等）。
+
+### Fortran
+
+#### 1 数组
+
+1. 数组作为参数的三种方式
+
+   ```fortran
+   Program main
+   	implicit none
+   	real a(2,3)
+   	
+   	interface
+   		Subroutine fun3(a)
+   			real a(:,:)
+   		end Subroutine fun3
+   	end interface
+   	
+   	call fun1(a)
+   	Write(*,'(6f3.0)')a
+   	
+   	call fun2(a,2,3)
+   	Write(*,'(6f3.0)')a
+   	
+   	call fun3(a)
+   	Write(*,'(6f3.0)')a
+   End Program main
+   
+   Subroutine fun1(a)
+   real a(*)
+   
+   	a(1:6)=1
+   end Subroutine
+   
+   Subroutine fun2(a,m,n)
+   integer m,n
+   real a(m,n)
+   	
+   	a=2
+   end Subroutine
+   
+   Subroutine fun3(a)
+   real a(:,:)
+   
+   	a=3
+   end Subroutine
+   ```
+
+   
