更新知识文档

--- a/2019-12-13 前端 100607.md
+++ b/2019-12-13 前端 100607.md
@@ -292,6 +292,33 @@ right(int n)
    }
    ```
 
+8. 全局作用域符::
+
+   ```c++
+   ::print(); // 使用标准函数
+   print(); //使用成员函数
+   ```
+
+9.  智能指针和stl容器
+
+   ```c++
+   #define SPMAP(A,B) std::map<A,std::shared_ptr<B>>
+   #define SPCMAP(A,B) CMap<A,A,std::shared_ptr<B>,std::shared_ptr<B>>
+   #define SPVECTOR(A) std::vector<std::shared_ptr<A>>
+   #define SP(A) std::shared_ptr<A>
+   #define SPCreate(A) std::make_shared<A>()
+   
+   //定义容器
+   SPMAP(int,className) classMap;
+   //添加变量
+   SP(className) classObject;
+   classMap[id] = classObject;
+   //查找变量
+   SP(className) classObject2;
+   classObject2 = classMap.at(id);
+   // *classObject2 就是智能指针指向的对象。
+```
+   
    
 
 [^1]:<font size = 2 >因为，全局变量的构造函数、析构函数以及初始化操作的调用顺序只是部分规定，每次生成有可能有变化，从而导致难以发现的bug。</font>
@@ -432,8 +459,111 @@ right(int n)
    CString str="hello";
    buf=(LPSTR)(LPCTSTR)str;
    ```
+   
+3. utf-8相关
 
- 
+   ```c++
+   using std::wstring;
+   //UTF-8转Unicode 
+   std::wstring CComTools::Utf82Unicode(const std::string& utf8string)
+   {
+   	int widesize = ::MultiByteToWideChar(CP_UTF8, 0, utf8string.c_str(), -1, NULL, 0);
+   	if (widesize == ERROR_NO_UNICODE_TRANSLATION)
+   	{
+   		throw std::exception("Invalid UTF-8 sequence.");
+   	}
+   	if (widesize == 0)
+   	{
+   		throw std::exception("Error in conversion.");
+   	}
+   	std::vector<wchar_t> resultstring(widesize);
+   	int convresult = ::MultiByteToWideChar(CP_UTF8, 0, utf8string.c_str(), -1, &resultstring[0], widesize);
+   	if (convresult != widesize)
+   	{
+   		throw std::exception("La falla!");
+   	}
+   	return std::wstring(&resultstring[0]);
+   }
+   //unicode 转为 ascii 
+   string CComTools::WideByte2Acsi(wstring& wstrcode)
+   {
+   	int asciisize = ::WideCharToMultiByte(CP_OEMCP, 0, wstrcode.c_str(), -1, NULL, 0, NULL, NULL);
+   	if (asciisize == ERROR_NO_UNICODE_TRANSLATION)
+   	{
+   		throw std::exception("Invalid UTF-8 sequence.");
+   	}
+   	if (asciisize == 0)
+   	{
+   		throw std::exception("Error in conversion.");
+   	}
+   	std::vector<char> resultstring(asciisize);
+   	int convresult = ::WideCharToMultiByte(CP_OEMCP, 0, wstrcode.c_str(), -1, &resultstring[0], asciisize, NULL, NULL);
+   	if (convresult != asciisize)
+   	{
+   		throw std::exception("La falla!");
+   	}
+   	return std::string(&resultstring[0]);
+   }
+   //utf-8 转 ascii 
+   string CComTools::UTF_82ASCII(string& strUtf8Code)
+   {
+   	string strRet("");
+   	//先把 utf8 转为 unicode 
+   	wstring wstr = Utf82Unicode(strUtf8Code);
+   	//最后把 unicode 转为 ascii 
+   	strRet = WideByte2Acsi(wstr);
+   	return strRet;
+   }
+   /// 
+   //ascii 转 Unicode 
+   wstring CComTools::Acsi2WideByte(string& strascii)
+   {
+   	int widesize = MultiByteToWideChar(CP_ACP, 0, (char*)strascii.c_str(), -1, NULL, 0);
+   	if (widesize == ERROR_NO_UNICODE_TRANSLATION)
+   	{
+   		throw std::exception("Invalid UTF-8 sequence.");
+   	}
+   	if (widesize == 0)
+   	{
+   		throw std::exception("Error in conversion.");
+   	}
+   	std::vector<wchar_t> resultstring(widesize);
+   	int convresult = MultiByteToWideChar(CP_ACP, 0, (char*)strascii.c_str(), -1, &resultstring[0], widesize);
+   	if (convresult != widesize)
+   	{
+   		throw std::exception("La falla!");
+   	}
+   	return std::wstring(&resultstring[0]);
+   }
+   //Unicode 转 Utf8 
+   std::string CComTools::Unicode2Utf8(const std::wstring& widestring)
+   {
+   	int utf8size = ::WideCharToMultiByte(CP_UTF8, 0, widestring.c_str(), -1, NULL, 0, NULL, NULL);
+   	if (utf8size == 0)
+   	{
+   		throw std::exception("Error in conversion.");
+   	}
+   	std::vector<char> resultstring(utf8size);
+   	int convresult = ::WideCharToMultiByte(CP_UTF8, 0, widestring.c_str(), -1, &resultstring[0], utf8size, NULL, NULL);
+   	if (convresult != utf8size)
+   	{
+   		throw std::exception("La falla!");
+   	}
+   	return std::string(&resultstring[0]);
+   }
+   //ascii 转 Utf8 
+   string CComTools::ASCII2UTF_8(string& strAsciiCode)
+   {
+   	string strRet("");
+   	//先把 ascii 转为 unicode 
+   	wstring wstr = Acsi2WideByte(strAsciiCode);
+   	//最后把 unicode 转为 utf8 
+   	strRet = Unicode2Utf8(wstr);
+   	return strRet;
+   }
+   ```
+
+   
 
 
 
@@ -484,7 +614,27 @@ right(int n)
    }
    ```
 
-4. SendMessage 能以同步方式向目标窗体发送一条消息，然后等待目标窗体的处理过程处理。
+4. CreateProcess 调用子程序的对话框
+
+   ```c++
+   STARTUPINFO sui;
+   	PROCESS_INFORMATION pi;
+   	ZeroMemory(&sui, sizeof(STARTUPINFO));
+   	sui.cb = sizeof(STARTUPINFO);
+   	sui.dwFlags = STARTF_USESHOWWINDOW;
+   	// 如果需要重定向，sui.dwFlags = STARTF_USESHOWWINDOW | STARTF_USESTDHANDLES;
+   	sui.hStdInput = GetStdHandle(STD_INPUT_HANDLE);
+   	sui.hStdOutput = GetStdHandle(STD_OUTPUT_HANDLE);
+   	sui.hStdError = GetStdHandle(STD_ERROR_HANDLE);
+   	sui.wShowWindow = SW_SHOW;
+   	// 如果需要重定向 sui.wShowWindow = SW_HIDE;
+   	TCHAR exename[256] = _T("pserver.exe");
+   	if (!CreateProcess(NULL, exename, NULL, NULL, TRUE, CREATE_NEW_CONSOLE, NULL, NULL, &sui, &pi))
+   ```
+   
+   
+   
+5. SendMessage 能以同步方式向目标窗体发送一条消息，然后等待目标窗体的处理过程处理。
 
    PostMessage 能以异步方式向目标窗体投递一条消息，消息投递出去函数立刻返回。
 
@@ -872,11 +1022,92 @@ right(int n)
 
    write(str,('A')) "-SLAB"  结果和输入一致 "-SLAB"
 
+#### 3.指针
 
+ 1. 指针分配的内存需要手动删除
+
+    ```fortran
+    program Console1
+    
+        implicit none
+        type arrchip
+            integer(kind=4):: arrcomop(4)
+            type(arrchip),pointer:: arrnext
+        endtype
+        type arr
+            integer(kind=4),allocatable::arrcomp(:)
+            type(arrchip),pointer::head
+        end type
+        type(arr),allocatable::testarr
+        type(arrchip),pointer::arrp,headsave,headnextsave
+        integer(kind=4)::i
+        ! Variables
+        allocate(testarr)
+        do i=1,10000000
+            if(i==1) then
+                allocate(testarr%head)    
+                arrp=>testarr%head
+            else
+                allocate(arrp%arrnext)
+                arrp=>arrp%arrnext
+            endif
+            arrp%arrcomop = 5
+        end do
+        headsave=>testarr%head
+        headnextsave=>testarr%head%arrnext
+        !deallocate(testarr%arrcomp)
+        deallocate(testarr)
+        if(associated(headsave)) then
+            print *,'Head not delete'
+            print *,headsave%arrcomop 
+            !虽然删除了testarr,但是head指针指向的内存仍存在，需要手动释放
+        else
+            print *,'Head delete'
+        endif
+        if(associated(headnextsave)) then
+            print *,'Next not delete'
+            print *,headnextsave%arrcomop
+        else
+            print *,'Next delete'
+        endif
+        ! Body of Console1
+    
+        end program Console1
+    ```
+
+
+#### 4.作为dll的设置
+
+- ​	不能用write(\*,\*) ，会破坏屏幕
+
+#### 5.并行问题
+
+##### 5.1并行分配数组
+
+- 此时对需要分配的数组采用FIRSTPRIVATE属性，会使变量传入是否allocated的属性。
+
+  ```fortran
+  !$OMP PARALLEL DEFAULT(PRIVATE) FIRSTPRIVATE(XLOAD,FQ_OUT) IF(useOMPS)
+  !$OMP DO 
+  do iBeam = 1,nBeam
+  	if(allocated(XLOAD)) deallocate(XLOAD)
+      allocate(XLOAD(9,pBeamS%iEle_Load+1))
+  end do
+  !$OMP END DO NOWAIT
+  !$OMP END PARALLEL
+  ```
+
+#### 6. 跨平台
+
+##### 6.1 XP平台fortran程序无法运行
+
+- linker:arrow_forward:syetem:arrow_forward:subsystem:arrow_forward:对应的XP选项
 
 [^ 1 ]: 
 
 ## VS设置
+
+#### 1.MFC
 
 1. #### MSVCRT.lib 和 LIBCMT.lib冲突
 
@@ -903,6 +1134,42 @@ right(int n)
 | _WIN32    | ×          | ×              | √        |
 | _WIN64    | ×          | ×              | x64      |
 
+  3. DLL 和 CRT
+
+     VCRuntime code provides an internal DLL entry-point _DLLMainCRTStartup for message to attach and detach from a process or thread.
+
+     _DLLMain is an optional function called by <i> _DLLMainCRTStartup</i> . Some libraries wrap the DllMain functoin for you. For example, in regular MFC DLL, the CWinApp object's InitInstance and ExitInstance member functions preform initialization and termination required by your DLL. for more details<a href = "https://docs.microsoft.com/en-us/cpp/build/run-time-library-behavior?view=vs-2019#initializing-regular-dlls"> MFC DLL</a>.
+
+#### 2.编译时显示用到的lib
+
+- /verbose:lib
+
+#### 3.解决nafxcw.lb 和 LIBCMT.lib冲突的问题
+
+- 调换连接顺序
+
+#### 4.避免用户没有开发环境windows的版本、静态链接运行时库
+
+- fortran ->library->/multithread
+- c++ ->代码生成->/MT
+- 静态链接运行时库会在每个dll创建相应的堆，因此必须遵守A申请内存，A清除内存的原则。
+- 动态链接dll共用exe的堆，动态分配内存和清除内存不必在同一dll中进行。
+- 编静态必须全部dll静态，否则还是依赖windows运行时库。
+
+#### 5. VS脱机问题
+
+- <a href = "https://docs.microsoft.com/zh-cn/previous-versions/aa289809(v=vs.71)?f1url=%3FappId%3DDev16IDEF1%26l%3DZH-CN%26k%3Dk(VisualStudio.SourceControl.AddToScFileAlreadyControlled)%26rd%3Dtrue">link</a>
+
+  1.在解决方案资源管理器中选择包含该项的项目。
+
+  2.在“文件”菜单中，指向“源代码管理”，然后单击“更改源代码管理”。
+  3.选择包含该项目的行，然后单击“绑定”。
+  4.在“Choose project from SourceSafe”对话框中，选择要将项目绑定到的服务器文件夹，然后单击“OK”。
+
+
+
+
+
 
 
 ## Git命令
@@ -910,3 +1177,77 @@ right(int n)
 1. <img src=".\git命令45.webp" style="zoom:80%;" />
 
 2. <img src=".\git命令.webp" style="zoom:80%;" />
+
+## 英文
+
+#### 1.无法解析的外部符号
+
+​	error LNK2001: unresolved external symbol
+
+## RoadMap
+
+### 1. licence
+
+​	<img src=".\licence指示" style="zoom:80%;" />
+
+## 数据库
+
+### 1.example
+
+<img src=".\数据库.png" style="zoom:80%;" />
+
+## GoogleTest
+
+### 1. 配置
+
+-  源码编译，静态库 gtest.lib，gtest_main.lib。有了gtest_main.lib 则测试里不需要再写main函数。
+
+- 链接gtest.lib，gtest_main.lib，引用include目录，在预编译头添加
+
+  ```c++
+  #include "gtest\gtest.h"
+  ```
+
+- 编写测试代码。
+
+  ```c++
+  #include "stdafx.h"
+  
+  TEST(TestCaseName, TestName) {
+  	EXPECT_EQ(1, 1);
+  	EXPECT_TRUE(true);
+  }
+  ```
+
+
+## 单元测试
+
+###  1.单元测试和集成测试的区别
+
+- ​	单元测试不需要访问网络，文件系统，数据库
+
+- 如果我们认为我们正在编写一个单元测试来验证业务逻辑类中的一些微妙边缘情况，但却意识到它需要使用到Web服务或数据库等外部资源，那就意味着出问题了。实际上，我们正在使用大锤来 破解坚果（Essentially, we are using a sledgehammer to crack a nut.）。 这意味着糟糕的设计。
+
+  作者：红色的Ricky
+  链接：https://www.jianshu.com/p/b2c35b0ffb5e
+  来源：简书
+
+### 2. 单元测试：易写，可读，可靠，快速。不是集成测试
+
+#### 2.1 可测试的代码
+
+## CMAKE
+
+### 1. cmake控制使用vs版本
+
+## 调试
+
+### 1. GetPDB的断点加载不上
+
+​	有时会是cpp文件结尾不是windows标准，选确定统一结尾符号就好了。
+
+
+
+
+
+​	
