提交一次更新

--- a/2019-12-13 前端 100607.md
+++ b/2019-12-13 前端 100607.md
@@ -317,6 +317,7 @@ right(int n)
    SP(className) classObject2;
    classObject2 = classMap.at(id);
    // *classObject2 就是智能指针指向的对象。
+   ```
 ```
    
    
@@ -449,8 +450,8 @@ right(int n)
    return str;
    
    }
-   ```
-   
+```
+
 2. 多字节下各种字符串的转换
 
    ```c++
@@ -813,7 +814,7 @@ right(int n)
           
        ```
     
-       
+    9. CreateProcess可以在32位程序中调用64位程序。:anger: 神奇！
 
 #### 9.lambda表达式
 
@@ -993,7 +994,7 @@ right(int n)
    	call fun3(a)
    	Write(*,'(6f3.0)')a
    End Program main
-   
+   ! c++调用的时候这种好使
    Subroutine fun1(a)
    real a(*)
    
@@ -1021,6 +1022,39 @@ right(int n)
 1. write(str,*) “-SLAB”  结果str以空格开头  " -SLAB"
 
    write(str,('A')) "-SLAB"  结果和输入一致 "-SLAB"
+
+2. c++-fortran接口传递字符串
+
+   - 字符串最好单独用reference修饰，避免传递字符串长度。
+
+   - 字符串长度传递方式设置： Fortran:arrow_forward: External Procedure :arrow_forward: String Length Argument Passing:arrow_forward:对应的选项
+
+   -  REFERENCE specifies a dummy argument's memory location is to be passed instead of the argument's value.
+
+     VALUE specifies a dummy argument's value is to be passed instead of the argument's memory location.
+
+     When VALUE is specified for a dummy argument, the actual argument passed to it can be of a different type. If necessary, type conversion is performed before the subprogram is called.
+
+     When a complex (KIND=4 or KIND=8) argument is passed by value, *two* floating-point arguments (one containing the real part, the other containing the imaginary part) are passed by immediate value.
+
+     Character values, substrings, assumed-size arrays, and adjustable arrays cannot be passed by value.
+
+     If REFERENCE (only) is specified for a character argument, the string is passed with no length.
+
+     If REFERENCE is specified for a character argument, and C (or STDCALL) has been specified for the routine, the string is passed with no length. This is true even if REFERENCE is also specified for the routine.
+
+     If REFERENCE and C (or STDCALL) are specified for a routine, but REFERENCE has *not* been specified for the argument, the string is passed with the length.
+
+     VALUE is the default if the C or STDCALL option is specified in the subprogram definition.
+
+3.  fortran 它与 C 字符串最大的区别就是：Fortran字符串是固定长度的，没有 \0 结束符。
+
+   ```fortran
+   ! 字符串后面加C则按照c字符串末尾加'\0'
+   dbname='dataA.db'C
+   ```
+
+   
 
 #### 3.指针
 
@@ -1103,6 +1137,21 @@ right(int n)
 
 - linker:arrow_forward:syetem:arrow_forward:subsystem:arrow_forward:对应的XP选项
 
+#### 7 . 并行
+
+1. 默认变量属性是共享的
+
+   ```fortran
+   !$OMP PARALLEL DEFAULT(PRIVATE) SHARED(a)
+   ! 此时除了变量a,其余均为私有属性。
+   ```
+
+2.   共有变量的赋值最好只有一个线程进行
+
+3.  为确保前程安全和动态库正确加载，主程序也需要 openMP选项编译<a href = https://software.intel.com/content/www/us/en/develop/documentation/fortran-compiler-oneapi-dev-guide-and-reference/top/compiler-reference/compiler-options/compiler-option-details/offload-compilation-options-openmp-options-and-parallel-processing-options/qopenmp-qopenmp.html#qopenmp-qopenmp> link </a>
+
+
+
 [^ 1 ]: 
 
 ## VS设置
@@ -1178,6 +1227,57 @@ right(int n)
 
 2. <img src=".\git命令.webp" style="zoom:80%;" />
 
+3.  git cherry-pick(挑拣)<a href = "https://www.cnblogs.com/endless-code/p/11093861.html"> link</a>
+
+   - 在dev分支执行git log命令，找到目标commit的commitid。
+
+   - 切换到master分支
+
+     ```c++
+     git checkout master
+     ```
+
+   - 执行git cherry-pick命令
+
+     ```c++
+     git cherry-pick 32259aa35d0702d2d05c648938798f9a5bd4b9e7
+     ```
+
+   - 再次执行git log命令就可以看到目标提交到master上了。
+
+   - 如果执行git cherry-pick合并之后发生了冲突，git会帮我们新建一个分支，如下所示
+
+     ```c++
+     纪鑫强@1403jixq MINGW64 /d/code/fem/FeMesh/FeMesh (jxq|CHERRY-PICKING)
+     ```
+
+     如果想取消注册合并，可以执行 git cherry-pick --quit或者git cherry-pick --abort命令取消这次挑拣。
+
+     二者不同的地方在于前者将会将当前分支未冲突的内容状态变为modified，
+
+     而后者则会直接将当前分支的内容退回到挑拣之前的状态。当然如果我们也可以解决冲突之后执行如下命令继续合并
+
+     ```c++
+     git add *
+     git cherry-pick --continue
+     ```
+
+   - 这个解决冲突的方式有时会报错
+
+     ```c++
+     error: option `mainline' expects a number greater than zero
+     ```
+
+     此时可以使用vs2019完成挑拣
+
+4. 删除跟踪
+
+   ```c++
+   git rm --cached .vs/FeMeshExe/v16/.suo
+   ```
+
+   
+
 ## 英文
 
 #### 1.无法解析的外部符号
@@ -1195,6 +1295,10 @@ right(int n)
 ### 1.example
 
 <img src=".\数据库.png" style="zoom:80%;" />
+
+2. 数据库加速
+   - select union all
+   - 索引
 
 ## GoogleTest
 
@@ -1238,15 +1342,53 @@ right(int n)
 
 ## CMAKE
 
-### 1. cmake控制使用vs版本
+### 1. cmake控制使用WindowsSDK版本
+
+​	如果不设置，cmake会自己计算一个WindowsSDK版本，我看过的Win7系统一般是8.1
+
+```cmake
+#example
+#在project前 set(CMAKE_SYSTEM_VERSION 10.0)
+cmake_minimum_required (VERSION 3.10)
+set(CMAKE_SYSTEM_VERSION 10.0)
+project (Demo1)
+add_executable(Demo main.cc)
+
+```
+
+2.cmake控制使用Visual Stdio 版本
+
+- 先点击File->Delete Catche
+
+<img src=".\cmake1.png" style="zoom:50%;" />
+
+<img src=".\cmake2.png" style="zoom:50%;" />
 
 ## 调试
 
-### 1. GetPDB的断点加载不上
+#### 1. GetPDB的断点加载不上
 
 ​	有时会是cpp文件结尾不是windows标准，选确定统一结尾符号就好了。
 
+#### 2. debug没问题但是release有问题问题的原因
 
+1. 初值
+   - debug:  int -858993460
+   - release: int 267443092
+
+## 编译
+
+ 1. 无法找到... 文件夹
+
+    应该是生成事件复制文件或者其他操作导致的
+
+## Python
+
+1. ``` python
+   pyinstaller -F hello.py hello
+   ```
+
+2. 
 
 
 
