--- a/2019-12-13 前端 100607.md
+++ b/2019-12-13 前端 100607.md
@@ -132,6 +132,23 @@ right(int n)
     namespace fbz=::foo::bar::barZ;//别名
     ```
 
+12. 头文件中的前置声明
+
+    ```c++
+    // 头文件
+    // 前置声明
+    SSNamespace
+    {
+     	class A;
+    }
+    
+    class B
+    {
+        public:
+        SSNamespace::A;
+    }
+    ```
+
     
 
 #### 5. 宏定义
@@ -318,15 +335,12 @@ right(int n)
    classObject2 = classMap.at(id);
    // *classObject2 就是智能指针指向的对象。
    ```
-```
    
+   [^1]:<font size = 2 >因为，全局变量的构造函数、析构函数以及初始化操作的调用顺序只是部分规定，每次生成有可能有变化，从而导致难以发现的bug。</font>
+   [^2]: 如果对象需要有意义的初始化，考虑使用另外的Init()方法，并（或）增加一个成员标记用于指示对象是否已经初始化成功。
+   [^3]: 如果结构体中有虚函数或结构体成员中有虚函数，则会将虚函数指针置0，如果后续程序调用虚函数，空指针很可能导致程序崩溃。因此，有虚函数或成员函数中有虚函数的结构体初始化，一定要用构造函数来完成。另外，如果一个类的结构中包含STL模板，使用ZeroMemory对这个对象清零操作也会引起一系列的崩溃问题（指针指向内存错误、迭代器越界访问等）。
    
-
-[^1]:<font size = 2 >因为，全局变量的构造函数、析构函数以及初始化操作的调用顺序只是部分规定，每次生成有可能有变化，从而导致难以发现的bug。</font>
-[^2]: 如果对象需要有意义的初始化，考虑使用另外的Init()方法，并（或）增加一个成员标记用于指示对象是否已经初始化成功。
-[^3]: 如果结构体中有虚函数或结构体成员中有虚函数，则会将虚函数指针置0，如果后续程序调用虚函数，空指针很可能导致程序崩溃。因此，有虚函数或成员函数中有虚函数的结构体初始化，一定要用构造函数来完成。另外，如果一个类的结构中包含STL模板，使用ZeroMemory对这个对象清零操作也会引起一系列的崩溃问题（指针指向内存错误、迭代器越界访问等）。
-
-#### 6.字符串
+   #### 6.字符串
 
 1. unicode下各种字符串的转换
 
@@ -450,7 +464,7 @@ right(int n)
    return str;
    
    }
-```
+   ```
 
 2. 多字节下各种字符串的转换
 
@@ -460,7 +474,7 @@ right(int n)
    CString str="hello";
    buf=(LPSTR)(LPCTSTR)str;
    ```
-   
+
 3. utf-8相关
 
    ```c++
@@ -563,6 +577,9 @@ right(int n)
    	return strRet;
    }
    ```
+```c++
+
+```
 
    
 
@@ -571,12 +588,11 @@ right(int n)
 #### 7.mfc
 
 1. messagebox对话框在程序后面加MB_SYSTEMMODAL
-
    ```c++
    ::MessageBox(Null,info,)
        
    ```
-   
+
 2. COM的基础是这些概念。
 
    interface----对象通过它来展示其功能的机制。
@@ -632,9 +648,9 @@ right(int n)
    	TCHAR exename[256] = _T("pserver.exe");
    	if (!CreateProcess(NULL, exename, NULL, NULL, TRUE, CREATE_NEW_CONSOLE, NULL, NULL, &sui, &pi))
    ```
+
    
-   
-   
+
 5. SendMessage 能以同步方式向目标窗体发送一条消息，然后等待目标窗体的处理过程处理。
 
    PostMessage 能以异步方式向目标窗体投递一条消息，消息投递出去函数立刻返回。
@@ -654,15 +670,15 @@ right(int n)
       ```
 
       <font size=2>此时会造成数组越界，因为strcpy将在str为起始地址的第11个单元写入‘0’，这样它将覆盖这个单元的值。</font>
-
+    
       <font size=2>但是如果你仅仅作字符串操作，一个一个的存入，此时将不会越界，或者你使用strncpy(str,"0123456789",10)，它也不会越界。不过你得小心，此时将不能使用如：strlen，strcpy等等。它的长度和内容变得完全不确定，如果从str地址起的单元都不为‘’，那么将全看作为它的内容，此时对它的操作将会是多么的恐怖！</font>
-
+    
     2. <font size=2>以指针操作数组</font>
-
+    
        <font size=2>指针相对数组的下标操作来说，更灵活、更高效，但常常一不小心它就跑到不知地方的地方去了，在循环批量处理中，多移一位就产生了越界，如果是读还好，但如果是写，这就跟上面出现的问题一样了。</font>
-
+    
     3. <font size=2>将对数据类型的错误操作</font>
-
+    
        ```c++
        short int x;
        int y;
@@ -675,23 +691,23 @@ right(int n)
        ```
 
        <font size=2>x只有两个字节的空间，而int需要4个字节的空间, 实际上己出问题了，但你放心，现在的编译器编译后不会引起错误，因为由于内存对齐操作，实际上它分配了4个字节给x，你没有写入到其它数中去，运行会完全正常。</font>
-
+    
        <font color=orange size=2>但当你定义的是数组时，那就会有影响了，它会覆盖你后面的数据。
        或者你在不同的编程语言中进行数据交换时，而类型与类型宽度不一致就会出问题，如VB中的Integer只有2个字节，而VC中的int是4个，当接口定义不够好时，那就会引发程序崩溃。</font>
-
+    
     4. <font size=2>使用new分配空间，但操作越界</font>:heart_decoration:
-
+    
        <font size=2>这类越界要容易发现一点，只要你以debug版运行，只要你越界，程序肯定会在delete处停下来。第一次出现此类问题时，真是迷惑不解，我的指针怎么都没变，但就是delete不掉，老报错。由于不知越界会造成此类问题，我一直以为我的电脑哪出毛病了，很正确的事，它就是不对，简直气得我吐血，后来得人指点，才明白，原来这里面还有这个东东！同理malloc，free有此问题。</font>
-
+    
     5. <font size=2>CString在GetBuffer后也容易出现越界</font>
-
+    
        <font size=2>CString确实有很多好用的地方，我最爱它的地方就是作参数，它可以让被调用的函数内分配空间，而在函数外无需对得来的空间进行释放。在CString析构时，它就会帮你释放这块空间。</font>
        <font size=2>但在这里面有一个函数你使用不当就会出现越界问题，那就是CString::GetBuffer。通过操作它返回的指针，你便可以直接操作它的缓冲区，这相对通过它的方法来操作内容效率要高出很多，但若你一不小心越界了，那错误也就出来了。不过还好在调试版中，ReleaseBuffer时会报错，若你没有调用ReleaseBuffer，那将在CString析构时报错。</font>
-
+    
     6. <font size=2>函数返回指针</font>
-
+    
        <font size=2>这种要尤其小心，返回的指针指向的内存要释放，而且不要直接使用该指针操作，例如</font>
-
+    
        ```c++
        char *buffer;
        if((buffer=getcwd(NULL,0))==NULL){
@@ -703,7 +719,7 @@ right(int n)
        ```
 
        <font size=2>上面4、5、6在调试会报错，因为在释放内存时，都调用delete，而delete实现如下</font>
-
+    
        ``` c++
        void __cdecl operator delete(void* p)
        {
@@ -716,9 +732,9 @@ right(int n)
        ```
 
        <font size=2>_free_dbg(p, _NORMAL_BLOCK);　将会作很多方面的检查，如果出错，便会报告出来。而free(p);则只是简间的对内存释放</font>
-
+    
     7. <font size=2>总结</font>
-
+    
        <font size=2>通过上面几点，相信大家知道如何去避免一些内存越界问题，同时也了解内存越界会引发各类问题，在我们遇到一些希奇古怪的问题时，不防关心一下你的内存操作。</font>
        
     8. 一个简单的创建被调试进程的案例
@@ -813,7 +829,7 @@ right(int n)
        }
           
        ```
-    
+
     9. CreateProcess可以在32位程序中调用64位程序。:anger: 神奇！
 
 #### 9.lambda表达式
@@ -830,12 +846,47 @@ right(int n)
        [&total,factor]
        [&,factor]
        [=,&total]
+       lambda表达式的“参数”是在被调用时拷贝，而“被捕获的变量的值”是在lambda表达式创建时拷贝
+       按值捕获，则在lambda创建时值被捕获，后续修改再影响。
+       按引用捕获，则在lambda创建后到被调用前，捕获变量的改变都会被计算。
    2. () 形参表
    3.  mutable 可以使在按值传递时能够改变传入的值
    4.  throw（）表明不抛出异常。此时如果函数体throw异常，会有警报C4297
    5. 返回值
    6. 函数体
    7. 传入实参
+       
+   //e.g. 值捕获和引用捕获
+   
+   int _tmain(int argc, _TCHAR* argv[])
+   {
+   	using namespace std;
+   	string strTemp = "非静态局部变量";
+   	int iTemp = 10;
+   	
+   	//定义lambda
+   	auto fun = [strTemp, &iTemp]()
+   	{	
+   		cout << strTemp << endl;
+   		cout << iTemp << endl;
+   	};
+    
+   	//改变两个局部变量的值
+   	strTemp = "local";
+   	iTemp = 20;
+    
+   	fun();//执行lambda
+    
+   	system("pause");
+   	return 0;
+   }
+   //————————————————输出结果
+   //非静态局部变量
+   //20
+   //非静态局部变量是值捕获，捕获的是lambda定义时的初值。
+   // iTemp是引用捕获，捕获的是调用时候的值。
+   
+   //原文链接：https://blog.csdn.net/yedawei_1/article/details/109508875
    ```
 
 
@@ -960,7 +1011,396 @@ right(int n)
 
       　　}
 
+#### 11. c++11添加的新特性
 
+##### 1.右引用
+
+1. ​	转移语义
+
+   使用右值移动，右值可以赋值给左值或者绑定到引用。右值是一个临时对象。
+
+   **对于左值，如果我们明确放弃对其资源的所有权，则可以通过std::move()来将其转为右值引用。std::move()实际上是static_cast()的简单封装。**
+
+   右值引用应用场景
+
+   - 按值传入参数。
+
+     ```c++
+     
+     class People {
+     public:
+       People(string name) // 按值传入字符串，可接收左值、右值。接收左值时为复制，接收右值时为移动
+       : name_(move(name)) // 显式移动构造，将传入的字符串移入成员变量
+       {
+       }
+       string name_;
+     };
+      
+     People a("Alice"); // 移动构造name
+      
+     string bn = "Bob";
+     People b(bn); // 拷贝构造name
+     ```
+
+     如果你要在构造函数中接收`std::shared_ptr`并且存入类的成员（这是非常常见的），那么按值传入更是不二选择。拷贝`std::shared_ptr`需要线程同步，相比之下移动`std::shared_ptr`是非常轻松愉快的。
+   
+     ```c++
+     class People{
+         public:
+         People(shared_ptr<int> a):id(move(a))
+         {
+             
+         }
+         shared_ptr<int> id;
+     }
+     
+     shared_ptr<int> val = make_shared<int>();
+     *val = 8;
+     People Tom(val); // 移动构造id。
+     ```
+
+
+​     
+
+   - 按值返回
+
+     ```c++
+     
+     vector<string> str_split(const string& s) {
+       vector<string> v;
+       // ...
+       return v; // v是左值，但优先移动，不支持移动时仍可复制。
+     }
+     ```
+
+     unique_ptr
+     
+     **返回值必须是栈上，类的成员变量不行，临时变量可以**
+     
+     
+     ```c++
+     
+     unique_ptr<SomeObj> create_obj(/*...*/) {
+       unique_ptr<SomeObj> ptr(new SomeObj(/*...*/));
+       ptr->foo(); // 一些可能的初始化
+       return ptr;
+     }
+     //当然还有更简单的形式
+     unique_ptr<SomeObj> create_obj(/*...*/) {
+       return unique_ptr<SomeObj>(new SomeObj(/*...*/));
+     }
+     ```
+
+   - 接收右值表达式
+
+     ```c++
+     void push_back( const T& value ); // (1)
+     void push_back( T&& value ); // (2)
+     
+     vector<vector<string>> vv;
+     vector<string> v = {"123", "456"};
+      
+     v.push_back("789"); // 临时构造的string类型右值被移动进容器v
+     vv.push_back(move(v)); // 显式将v移动进vv
+	```
+
+   - std::vector的增长
+
+     以前vector增长会重新申请内存，并一个个复制过去。
+
+     现在只需要移动
+
+   - std::unique_ptr放入容器
+
+     过去由于vector增长会复制对象，而unique_ptr不能复制，所以不能放入vector。
+
+     现在可以。
+
+   - std::thread的传递
+
+     thread也是一种不可复制的资源，但可以通过移动来传递所有权。
+
+   当形参是右值只有实参是右值才会作为右值传入，否则推导为左值。
+
+##### 2.cast 
+
+	- 一般都是转指针或者引用。
+	- static_cast  编译时检查
+
+```c++
+float a=1.0f;
+int b=static_cast<int> a;
+```
+
+- const_cast 把const转为非const，或者非const转为const
+
+- reinterpret_cast 只在必要时使用
+
+- dynamic_cast 和上面三种不同，依靠RTTI（run time type identification） **运行时检查**
+
+  可以使类型、指针、引用进行安全的转换 <a hrep=https://www.cnblogs.com/xiangtingshen/p/10851851.html>link</a>
+
+  所谓安全的转换就是，这个基类实际是子类转来的，想要再转回去的时候就是安全的转换。
+
+  e.g.
+
+  ```c++
+  class based 
+  {
+      public:
+      based(){cout<<"base is construct"<<endl;};
+      ~based(){cout<<"base is delete"<<endl;};
+      
+  }
+  
+  class derived :public based
+  {
+      public:
+      derived(){cout<<"derived is construct"<< endl;};
+      ~derived(){cout<<"derived is delete"<<endl;};
+  }
+  
+  test()
+  {
+      based* base = new derived();
+      derived* derive = dynamic_cast<derived*>(base);
+      // 此处成功，因为可以安全的向下转换。
+      based* base2 = new based();
+      derived* derive2 = dynamic_cast<derived*>(base2);
+      if(!derive2)
+          cout<<"dynamic cast failed!"<<endl;
+      // 此处会失败因为不安全从基类转换为子类。
+      try
+      {
+          base a;
+          based& baseref=a;
+          derived& deriveref=dynamic_cast<derived&>(baseref);
+          // 此处也会失败，理由同上，但是会抛出一个异常 badcast
+      }
+      catch(std::exception e)
+      {
+          cout<<e.what()<<endl;
+      }
+  }
+  ```
+
+  
+
+
+
+#### 12. 智能指针
+
+	##### 1. unique_ptr
+
+ 1.  unique_ptr .reset() 重置对象，并delete指针。
+
+ 2. unique_ptr.release() 释放关联对象，返回原始指针。没有delete。
+
+ 3. 转移unique_ptr
+
+    ```c++
+    // 通过原始指针创建 taskPtr2
+    std::unique_ptr<Task> taskPtr2(new Task(55));
+    // 把taskPtr2中关联指针的所有权转移给taskPtr4
+    std::unique_ptr<Task> taskPtr4 = std::move(taskPtr2);
+    // 现在taskPtr2关联的指针为空
+    if(taskPtr2 == nullptr)
+    	std::cout<<"taskPtr2 is  empty"<<std::endl;
+    
+    // taskPtr2关联指针的所有权现在转移到了taskPtr4中
+    if(taskPtr4 != nullptr)
+    	std::cout<<"taskPtr4 is not empty"<<std::endl;
+    
+    // 会输出55
+    std::cout<< taskPtr4->mId << std::endl;
+    ————————————————
+    版权声明：本文为CSDN博主「码农小明」的原创文章，遵循CC 4.0 BY-SA版权协议，转载请附上原文出处链接及本声明。
+    原文链接：https://blog.csdn.net/shaosunrise/article/details/85158249
+    ```
+
+4. unique_ptr 不能调用复制构造和赋值函数
+
+   ```c++
+   std::unique_ptr<Task> taskPtr3 = taskPtr2; //调用复制构造函数，编译出错。
+   taskPtr = taskPtr2; //调用赋值函数，编译出错。
+   ```
+
+5. 使用std::make_unique 创建 unique_ptr
+
+   ```c++
+   std::unique_ptr<Task> taskPtr = std::make_unique<Task>(34);
+   ```
+
+ 6.  unique_ptr 作为参数，要使用引用
+
+     ```c++
+     // 移动ptr1，使用unique_ptr作为参数
+     void moveptr(unique_ptr<int>& ptr1)
+     {
+         unique_ptr<int> inter_value;
+         intervalue = std::move(ptr1);
+     }
+     
+     int main()
+     {
+         // 定义ptr1
+         unique_ptr<int> ptr1 = std::make_unique<int>(8);
+         moveptr(ptr1);
+     }
+     ```
+
+7. weak_ptr 
+
+   可以避免shared_ptr相互引用导致的内存无法释放问题。
+
+   weak_ptr 不能直接访问变量，需要先转化为shared_ptr
+
+   ```c++
+   shared_ptr<int> d = make_shared<int>(20);
+   weak_ptr<int> a = d;
+   shared_ptr<B> p=a.lock(); // lock返回一个shared_ptr，并锁定对象，避免被shared_ptr释放。 
+   ```
+
+   
+
+#### 13.命令行编译
+
+1. boost 例子
+
+   ```bash
+   cl /EHsc /I . D:\code\boostcode\temp.cpp ^
+   /link /LIBPATH:D:Chorem下载\boost_1_76_0\bin.v2\libs
+   ```
+
+#### 14.io,iostream
+
+​	<a href=https://blog.csdn.net/ayh2068/article/details/101457772>link</a>
+
+#### 15.字符串编码
+
+​	string是采用utf-8采用多字节，wstring采用unicode普遍是两字节存储。
+
+​	多字节是可变的 ASCII码是一个字节，首位是0xxxxxxx
+
+​	对于n个字节（n>1） ,第一个字节的前n位设为1，第n+1位设为0，后面的字节前两位都是10
+
+​	
+
+
+```c++
+// utf-8的普遍格式
+U+ 0000~ U+007F: 0xxxxxxx
+U+ 0080~ U+07FF: 110XXXXX 10XXXXXX
+U+ 0800~ U+FFFF: 1110xxxx 10xxxxxx 10xxxxxx
+U+ 10000~U+10FFFF: 11110xxx 10xxxxxx 10xxxxxx
+// unicode编码（UCS-2）
+I 00000000 01001001
+t 00000000 01110100
+' 00000000 00100111
+s 00000000 01110011
+  00000000 00100000
+知 01110111 11100101
+乎 01001110 01001110
+日 01100101 11100101
+报 01100010 10100101
+// utf-8编码
+I 01001001
+t 01110100
+' 00100111
+s 01110011
+  00100000
+知 11100111 10011111 10100101
+乎 11100100 10111001 10001110
+日 11100110 10010111 10100101
+报 11100110 10001010 10100101
+//GBK编码
+知 D6AA 1101 0110 1010 1010
+// 知 GBK编码一共两个字节，unicode编码三个字节
+// 费流量和硬盘。
+   
+作者：uuspider
+链接：https://www.zhihu.com/question/23374078/answer/65352538
+来源：知乎
+著作权归作者所有。商业转载请联系作者获得授权，非商业转载请注明出处。
+```
+#### 16.堆栈
+
+<a href=https://blog.csdn.net/jirryzhang/article/details/79518408>link</a>
+
+#### 17.减少IO的方式
+
+1. 常规用法
+
+```c++
+//C++ code：
+#include <iostream>
+#include <fstream>
+#include <string>
+using namespace std;
+class file{
+public:
+	//按行读数据,不分行写入另外一个文件
+	bool fromShortToLong(string s_path,string d_path){
+		string buffer;
+		fstream infile(s_path);
+		fstream outfile(d_path);
+		if(!infile){
+			cout << "Unable to open infile";
+			exit(1); // terminate with error
+		}
+		if(!outfile){
+			cout << "Unable to open outfile";
+			exit(1); // terminate with error
+		}do{
+			outfile<<buffer;
+		}while (getline(infile,buffer));
+		cout<<"读写完成。"<<endl;
+		system("pause");
+		outfile.close();
+		infile.close();
+	}
+};
+void main(){
+	file test;
+	test.fromShortToLong("D://test_read.txt","D://test_write.txt");
+}
+```
+
+2. 赋内存减少IO用法
+
+   ```c++
+   bool fromShortToLong(string s_path,string d_path)
+   {
+   	string buffer;
+   	ifstream infile(s_path.c_str());
+   	ofstream outfile(d_path.c_str());
+   	if(!infile)
+   	{
+   		cout << "Unable to open infile";
+   		exit(1); // terminate with error
+   	}
+   	if(!outfile)
+   	{
+   		cout << "Unable to open outfile";
+   		exit(1); // terminate with error
+   	}
+   	buffer.assign(istreambuf_iterator<char>(infile),istreambuf_iterator<char>());
+   	stringstream strStr;
+   	strStr.str(buffer);
+   	string linestr;
+   	do
+   	{
+   		outfile<<linestr;
+   	}
+   	while (getline(strStr,linestr));
+   	cout<<"读写完成。"<<endl;
+   	return true;
+   }
+   ```
+
+#### 17. 如何使用stackoverflow
+
+​	<a href=https://blog.csdn.net/weixin_38233274/article/details/80349534>link</a>
 
 ***
 
@@ -1388,8 +1828,17 @@ add_executable(Demo main.cc)
    pyinstaller -F hello.py hello
    ```
 
-2. 
 
+### python 如果pip命令报错
 
+- ​	使用python -m ensurepip <a h="https://blog.csdn.net/wangh0802/article/details/98895065">link</a>
+
+### pyinstaller 不是内部或外部命令
+
+- pip install pyinstaller
+
+### 小工具
+
+- listdll
 
 ​	
