--- a/2019-12-13 前端 100607.md
+++ b/2019-12-13 前端 100607.md
@@ -831,6 +831,14 @@ right(int n)
        ```
 
     9. CreateProcess可以在32位程序中调用64位程序。:anger: 神奇！
+    
+    10. CreateProcess 查找exe顺序
+    
+        1. 包含当前进程可执行文件
+        2. 当前进程的工作目录
+        3. Windows系统目录，即GetSystemDirectory返回的目录
+        4. Windows目录
+        5. PATH环境变量列出的目录
 
 #### 9.lambda表达式
 
@@ -1015,7 +1023,7 @@ right(int n)
 
 ##### 1.右引用
 
-1. ​	转移语义
+1. ​	转移语义 <a name="rightvalue">moc</a>
 
    使用右值移动，右值可以赋值给左值或者绑定到引用。右值是一个临时对象。
 
@@ -1401,6 +1409,97 @@ void main(){
 #### 17. 如何使用stackoverflow
 
 ​	<a href=https://blog.csdn.net/weixin_38233274/article/details/80349534>link</a>
+
+### 18. C++问题
+
+1. 什么是流，存在哪些类型的流
+
+   流：设备的一个抽象表示，可以执行输出和输入操作。流基本上可以表示为不确定长度的字符的输入和输出。
+
+   流的种类 ： 
+
+   - 设备： istream,ostream,iostream
+   - 文件：ifstream,ofstream,fstream
+   - 字符串：istringstream,ostringstream,stringstream
+
+2. 左值
+
+   对象，就是一片能够容纳数据的内存区域。
+
+   左值是一个指向对象的表达式。左值的例子有变量、数组元素、解引用的指针等。 左值就是一个具有内存地址，并且可以拥有名称的任何元素。
+
+3. 引用和指针的区别
+
+   
+
+   引用是左值，提供了一种给左值赋予一个别名的机制。对于避免费时和不必要的复制很好用。
+
+   引用和指针在使用上有所不同
+
+   - 取值运算符应用到一个对象上，返回其地址。因此，它只能在赋值语句右侧出现，或者在指针变量初始化表达式中出现。
+   - 当引用相关时，符号&仅仅用在引用声明中，因此，它只出现在类型名称与所声明的引用名称中间。
+
+4. 一种好的const使用方式
+
+   对于不需要通过函数来进行变化的指针和引用参数，使用const来保护。只读引用参数：对按一你用传递参数提供了高效性，对按值传递参数提供了安全性。
+
+5. c++函数签名
+
+   函数签名由名称和参数表组成。
+
+   两个函数仅有返回值不同，在同一作用域中出现这种情况会编译报错。
+
+6. 类和结构体的关系
+
+   Stroustrup将struct定义成其成员默认为public类型的一个类
+
+7. 封装的一个优势
+
+   允许程序员使用一致的类成员命名机制。
+
+8. static
+
+   1. static局部变量：可以用在局部变量，成为静态存储类。 首次处理局部变量才会创建并初始化；程序终止，销毁该变量。当模块加载到内存中，非局部static变量会被创建一次，程序终止时销毁它。
+
+   2. static类成员： 与类本身相关，而不是属于某个特定的对象。它不会计入sizeof()运算符获得的类对象的大小。类的每一个对象都维护属于自己的非static数据成员。static数据成员被该类的对象共享。相对于全局变量，更倾向于static成员，因为static成员不会在全局命名空间中增加不必要的名称。
+
+   3. static成员变量需要在cpp中初始化
+
+      ```c++
+      //Thing.h
+      class Thing{
+          public:
+          Thing(int a,int b);
+          ~Thing();
+          void display() const;
+          static void showCount();
+          private:
+          int m_First,m_Second;
+          static int s_Count;
+      }
+      //Thing.cpp
+      #include "static.h"
+      #include <iostream>
+      
+      int Thing::s_Count = 0; // static 变量初始化。
+      // 关键字static会将变量的作用域从全局变到文件。
+      // 关键字static对函数的定义完全是多余。
+      ```
+
+9. 两个类需要用到彼此的定义可以考虑前置声明，因为互相包含头文件会造成循环依赖。
+
+10. explicit 可以避免单参构造函数被编译器隐式的转换
+
+    ```c++
+    explicit Fraction(int n,int d=1)
+        :m_Numer(n),m_Denom(d){}
+    ```
+
+11. const 放在成员函数有特殊含义
+
+    const放在参数表之后就成为函数签名的一部分。从而保证此函数不会改变猪对象的状态。原理就是在this指针前加了一个const。this指针就是指向const的指针。
+
+    指定mutable的成员变量可以在const成员函数中修改。
 
 ***
 
@@ -1841,4 +1940,28 @@ add_executable(Demo main.cc)
 
 - listdll
 
+## 文档
+
+1. doxygen
+
+   ```bash
+   #生成配置文件
+   doxygen -g config1
+   #之后在文本编辑器编辑配置文件
+   #之后生成代码文档
+   doxygen config1
+   ```
+
+   
+
 ​	
+
+## QT
+
+1. 如果找不到QApplication, 在.pro文件中添加
+
+   ```shell
+   greaterThan(QT_MAJOR_VERSION, 4): QT += widgets
+   ```
+
+   
